--- a/Assets/SemicolonIsland/Editor/SemicolonIsland.Editor.asmdef
+++ b/Assets/SemicolonIsland/Editor/SemicolonIsland.Editor.asmdef
@@ -5,7 +5,9 @@
         "GUID:69448af7b92c7f342b298e06a37122aa",
         "GUID:9e24947de15b9834991c9d8411ea37cf"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
